# west-africa-voice-support-agent

./: .env.example  .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
app/: main.py
app/agent/: generation.py  pipeline.py
app/api/: routes_ask.py  routes_chat.py  routes_eval.py  routes_health.py  routes_kb.py  routes_transcribe.py
app/asr/: transcribe.py
app/core/: config.py  db.py  logging.py  models.py  schemas.py
app/evaluation/: run_eval.py
app/guardrails/: escalation.py  tickets.py
app/retrieval/: chunking.py  hybrid_search.py  index_admin.py  loader.py  normalize.py  search.py  vector_search.py
docs/: design.md
eval/: eval_set.jsonl  report.md
frontend/: app.js  index.html  styles.css
knowledge_base/: account_locked.md  cashout_failures.md  escalation_policy.md  faq.md  kyc_help.md  wrong_recipient.md
tests/: test_ask.py  test_asr.py  test_chat.py  test_eval.py  test_generation.py  test_health.py  test_hybrid_retrieval.py  test_kb_management.py  test_retrieval.py  test_tickets.py  test_voice_ask.py
